--- a/src/server/views/index.ejs
+++ b/src/server/views/index.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title><%= title %></title>
+</head>
+<body>
+  <div id="app"></div>
+  <script src="/build/js/index.min.js"></script>
+</body>
 </html>
